samples/_failures_safe/1761043996_47323a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9486174.c: In function ‘main’:
./samples/SAFE/__tmp_e9486174.c:155:17: error: expected ‘;’ at end of input
  155 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_e9486174.c:155:9: error: expected declaration or statement at end of input
  155 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_e9486174.c:155:9: error: expected declaration or statement at end of input
